--- a/data-pipeline/requirements.txt
+++ b/data-pipeline/requirements.txt
@@ -5,3 +5,8 @@ peewee==3.17.9
 litellm==1.65.6
 pydantic-settings==2.8.1
 chromadb==1.0.8
+joblib==1.5.0
+matplotlib==3.10.1
+pandas==2.2.3
+numpy==2.2.5
+scikit-learn==1.6.1
